--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,8 +17,8 @@
 .item-profile {
   height: 250px;
   .item-avatar > img:first-child {
-    max-width: 150px;
-    max-height: 150px;
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
   }
 }
@@ -34,4 +34,13 @@
 .bar-button-clear-md-default,
 .bar-button-md-default {
   color: #ffffff;
+}
+
+.toggle-md.toggle-checked .toggle-icon {
+  background-color: #ffc8c8;
+}
+.toggle-md.toggle-checked .toggle-inner {
+  -webkit-transform: translate3d(16px, 0, 0);
+  transform: translate3d(16px, 0, 0);
+  background-color: color($colors, danger);
 }
