--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -17,9 +17,9 @@ page-menu {
     color: color($colors, light);
   }
 
-  .button-md {
-    background-color: color($colors, danger);
-  }
+  // .button-md {
+  //   background-color: color($colors, danger);
+  // }
 }
 
 .contact-popover .popover-content {
