--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,7 +33,7 @@ $text-input-highlight-color-invalid: transparent;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #488aff,
+  primary: #f53d3d,
   secondary: #32db64,
   danger: #f53d3d,
   light: #989898,
