--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,6 +25,9 @@
       <button menuClose ion-item *ngIf="accountPvdr.loginStatus()" (click)="openPage('MenuPage')">
         Menu
       </button>
+      <button menuClose ion-item *ngIf="accountPvdr.loginStatus()" (click)="openPage('OrderPage')">
+        Order
+      </button>
       <button menuClose ion-item *ngIf="accountPvdr.loginStatus()" (click)="openPage('AnalyticPage')">
         Analytics
       </button>
